; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/agp/extr_agp_intel.c_agp_intel_get_aperture.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/agp/extr_agp_intel.c_agp_intel_get_aperture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.agp_intel_softc = type { i32 }

@AGP_INTEL_APSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @agp_intel_get_aperture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @agp_intel_get_aperture(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.agp_intel_softc*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.agp_intel_softc* @device_get_softc(i32 %5)
  store %struct.agp_intel_softc* %6, %struct.agp_intel_softc** %3, align 8
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @AGP_INTEL_APSIZE, align 4
  %9 = call i32 @pci_read_config(i32 %7, i32 %8, i32 1)
  %10 = load %struct.agp_intel_softc*, %struct.agp_intel_softc** %3, align 8
  %11 = getelementptr inbounds %struct.agp_intel_softc, %struct.agp_intel_softc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %9, %12
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.agp_intel_softc*, %struct.agp_intel_softc** %3, align 8
  %16 = getelementptr inbounds %struct.agp_intel_softc, %struct.agp_intel_softc* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = xor i32 %14, %17
  %19 = shl i32 %18, 22
  %20 = or i32 %19, 4194303
  %21 = add nsw i32 %20, 1
  ret i32 %21
}

declare dso_local %struct.agp_intel_softc* @device_get_softc(i32) #1

declare dso_local i32 @pci_read_config(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
